2016-03-18
Started assignment 1.06.  Updated the Makefile to handle C++.