@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.3)
 project(project0)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-add_definitions(-std=gnu11)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")
+#add_definitions(-std=gnu11)
 set(CMAKE_LEGACY_CYGWIN_WIN32 0)
 
 set(SOURCE_FILES )
@@ -13,7 +13,7 @@ set(PROJECT1.02 project1.02/src/main.c)
 set(PROJECT1.03 project1.03/src/main.c project1.03/src/dungeon.c project1.03/src/dungeon.h project1.03/src/globals.h project1.03/src/path.c project1.03/src/path.h project1.03/src/binheap.c project1.03/src/binheap.h project1.03/src/utils.c project1.03/src/utils.h)
 set(PROJECT1.04 project1.04/src/main.c project1.04/src/dungeon.c project1.04/src/path.c project1.04/src/binheap.c project1.04/src/utils.c project1.04/src/movement.c project1.04/src/monster.c project1.04/src/turn.c)
 set(PROJECT1.05 project1.05/src/main.c project1.05/src/dungeon.c project1.05/src/path.c project1.05/src/heap.c project1.05/src/utils.c project1.05/src/movement.c project1.05/src/monster.c project1.05/src/turn.c project1.05/src/screen.c)
-set(PROJECT1.06 project1.06/src/main.c project1.06/src/dungeon.c project1.06/src/path.c project1.06/src/heap.c project1.06/src/utils.c project1.06/src/movement.c project1.06/src/monster.c project1.06/src/turn.c project1.06/src/screen.c)
+set(PROJECT1.06 project1.06/src/main.c project1.06/src/dungeon.c project1.06/src/path.c project1.06/src/heap.c project1.06/src/utils.c project1.06/src/movement.c project1.06/src/monster.cpp project1.06/src/turn.c project1.06/src/screen.c)
 find_package(Curses REQUIRED)
 #include_directories()
 #set(PROJECT1 project1.c)
