@@ -1,2 +1,5 @@
+2016-03-19
+Converted monster.c to C++ and added extern "C" to the appropriate headers.
+
 2016-03-18
 Started assignment 1.06.  Updated the Makefile to handle C++.
